syntax = "proto3";

option go_package = "github.ibm.com/decentralized-trust-research/scalable-committer/api/protosigverifierservice";

package protosigverifierservice;

import "api/protoblocktx/block_tx.proto";


service Verifier {
    rpc UpdatePolicies(Policies) returns (Empty);
    rpc StartStream(stream RequestBatch) returns (stream ResponseBatch);
}

message Policies {
    repeated PolicyItem policies = 1;
}

message PolicyItem {
    bytes namespace = 1;
    bytes policy = 2;
}

message Empty {
}

message Request {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    protoblocktx.Tx tx = 3;
}

message RequestBatch {
    repeated Request requests = 1;
}

message Response {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    string tx_id = 3;
    protoblocktx.Status status = 4;
}

message ResponseBatch {
    repeated Response responses = 1;
}
